--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap');
 
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     margin: 0;
     height: 100vh;  
@@ -10,16 +18,21 @@ body {
     background-color: #eef4ff;
 }
   
-
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 1rem;
-  }
-  
 .search,
 .pagination {
     background-color: var(--red);
     flex-shrink: 0;
 }
+
+.list-wrapper {
+    flex: 1;
+    /* overflow-y: auto;*/
+    overflow-x: hidden; /* Отключаем горизонтальную прокрутку */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px 40px;
+    /* height: 100%; */
+}
+
