--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -9,9 +9,15 @@
     flex-wrap: nowrap;
     margin-top: auto;
     width: 100wh;
+    padding-bottom: 15px;
 }
 
 .pagination__buttons {
+    display: flex;
+    gap: 20px;
+}
+
+.pagination__buttons-left {
     display: flex;
     gap: 20px;
 }
