--- a/src/styles/details.css
+++ b/src/styles/details.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap');
+@import url('/src/styles/variables.css');
+
 *,
 *::after,
 *::before {
